## libjpeg/Makefile.am for fs2_open
##
## $Id: Makefile.am,v 1.4 2005-07-07 16:36:58 taylor Exp $


EXTRA_DIST = README


# D_ variants are defaults and should always be used
AM_CFLAGS = @D_CFLAGS@ -Wno-main
AM_LDFLAGS = @D_LDFLAGS@

noinst_LIBRARIES = libjpeg.a

###############################################################################
##
## Begin JPEG library
##

libjpeg_a_SOURCES = \
	cderror.h	\
	cdjpeg.h	\
	jcapimin.c	\
	jcapistd.c	\
	jccoefct.c	\
	jccolor.c	\
	jcdctmgr.c	\
	jchuff.c	\
	jchuff.h	\
	jcinit.c	\
	jcmainct.c	\
	jcmarker.c	\
	jcmaster.c	\
	jconfig_lnx.h	\
	jconfig_vc.h	\
	jcomapi.c	\
	jcparam.c	\
	jcphuff.c	\
	jcprepct.c	\
	jcsample.c	\
	jctrans.c	\
	jdapimin.c	\
	jdapistd.c	\
	jdatadst.c	\
	jdatasrc.c	\
	jdcoefct.c	\
	jdcolor.c	\
	jdct.h	\
	jddctmgr.c	\
	jdhuff.c	\
	jdhuff.h	\
	jdinput.c	\
	jdmainct.c	\
	jdmarker.c	\
	jdmaster.c	\
	jdmerge.c	\
	jdphuff.c	\
	jdpostct.c	\
	jdsample.c	\
	jdtrans.c	\
	jerror.c	\
	jerror.h	\
	jfdctflt.c	\
	jfdctfst.c	\
	jfdctint.c	\
	jidctflt.c	\
	jidctfst.c	\
	jidctint.c	\
	jidctred.c	\
	jinclude.h	\
	jmemansi.c	\
	jmemmgr.c	\
	jmemsys.h	\
	jmorecfg.h	\
	jpegint.h	\
	jpeglib.h	\
	jquant1.c	\
	jquant2.c	\
	jutils.c	\
	jversion.h	\
	transupp.h

##
## End JPEG library
##
###############################################################################
