## lua/Makefile.am for fs2_open
##
## $Id: Makefile.am,v 1.1 2005-10-30 10:46:23 taylor Exp $


# D_ variants are defaults and should always be used
AM_CFLAGS = @D_CFLAGS@
AM_LDFLAGS = @D_LDFLAGS@

noinst_LIBRARIES = liblua.a

###############################################################################
##
## Begin Lua library
##

liblua_a_SOURCES = \
	lapi.c	\
	lapi.h	\
	lauxlib.c	\
	lauxlib.h	\
	lbaselib.c	\
	lcode.c	\
	lcode.h	\
	ldblib.c	\
	ldebug.c	\
	ldebug.h	\
	ldo.c	\
	ldo.h	\
	ldump.c	\
	lfunc.c	\
	lfunc.h	\
	lgc.c	\
	lgc.h	\
	liolib.c	\
	llex.c	\
	llex.h	\
	llimits.h	\
	lmathlib.c	\
	lmem.c	\
	lmem.h	\
	loadlib.c	\
	lobject.c	\
	lobject.h	\
	lopcodes.c	\
	lopcodes.h	\
	lparser.c	\
	lparser.h	\
	lstate.c	\
	lstate.h	\
	lstring.c	\
	lstring.h	\
	lstrlib.c	\
	ltable.c	\
	ltable.h	\
	ltablib.c	\
	ltests.c	\
	ltm.c	\
	ltm.h	\
	lua.h	\
	lualib.h	\
	lundump.c	\
	lundump.h	\
	lvm.c	\
	lvm.h	\
	lzio.c	\
	lzio.h

##
## End Lua library
##
###############################################################################
